// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBasicTable cellProps renders cells with custom props from a callback 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_0"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              className="customRowClass"
              data-test-subj="cell-1-name"
              header="Name"
              key="_data_column_name_0_0"
              onClick={[Function]}
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              className="customRowClass"
              data-test-subj="cell-2-name"
              header="Name"
              key="_data_column_name_1_0"
              onClick={[Function]}
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              className="customRowClass"
              data-test-subj="cell-3-name"
              header="Name"
              key="_data_column_name_2_0"
              onClick={[Function]}
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable cellProps renders rows with custom props from an object 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_0"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              className="customClass"
              data-test-subj="cell"
              header="Name"
              key="_data_column_name_0_0"
              onClick={[Function]}
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              className="customClass"
              data-test-subj="cell"
              header="Name"
              key="_data_column_name_1_0"
              onClick={[Function]}
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              className="customClass"
              data-test-subj="cell"
              header="Name"
              key="_data_column_name_2_0"
              onClick={[Function]}
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable empty is rendered 1`] = `
<div
  aria-label="aria-label"
  className="euiBasicTable testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow>
          <EuiTableRowCell
            align="center"
            colSpan={1}
            isMobileFullWidth={true}
            textOnly={true}
          >
            No items found
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable empty renders a node as a custom message 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow>
          <EuiTableRowCell
            align="center"
            colSpan={1}
            isMobileFullWidth={true}
            textOnly={true}
          >
            <p>
              no items, click 
              <a
                href={true}
              >
                here
              </a>
               to make some
            </p>
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable empty renders a string as a custom message 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow>
          <EuiTableRowCell
            align="center"
            colSpan={1}
            isMobileFullWidth={true}
            textOnly={true}
          >
            where my items at?
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable itemIdToExpandedRowMap renders an expanded row 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            aria-owns="row_1_expansion"
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
          <EuiTableRow
            id="row_1_expansion"
            isExpandedRow={true}
          >
            <EuiTableRowCell
              align="left"
              colSpan={1}
              textOnly={true}
            >
              <div>
                Expanded row
              </div>
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_3"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_3_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable rowProps renders rows with custom props from a callback 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_0"
        >
          <EuiTableRow
            className="customRowClass"
            data-test-subj="row-1"
            isSelected={false}
            onClick={[Function]}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_0_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            className="customRowClass"
            data-test-subj="row-2"
            isSelected={false}
            onClick={[Function]}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            className="customRowClass"
            data-test-subj="row-3"
            isSelected={false}
            onClick={[Function]}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable rowProps renders rows with custom props from an object 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_0"
        >
          <EuiTableRow
            className="customClass"
            data-test-subj="row"
            isSelected={false}
            onClick={[Function]}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_0_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            className="customClass"
            data-test-subj="row"
            isSelected={false}
            onClick={[Function]}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            className="customClass"
            data-test-subj="row"
            isSelected={false}
            onClick={[Function]}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable with pagination - 2nd page 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_3"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_3_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_4"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_4_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 1,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_0"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_0_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination and error 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow>
          <EuiTableRowCell
            align="center"
            colSpan={1}
            isMobileFullWidth={true}
            textOnly={true}
          >
            <EuiIcon
              color="danger"
              size="m"
              type="minusInCircle"
            />
             
            no can do
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable with pagination and selection 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          scope="col"
          width="24px"
        >
          <EuiCheckbox
            aria-label="Select all rows"
            checked={false}
            compressed={false}
            data-test-subj="checkboxSelectAll"
            disabled={false}
            id="_selection_column-checkbox"
            indeterminate={false}
            onChange={[Function]}
            type="inList"
          />
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_1"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-1"
                disabled={false}
                id="_selection_column_1-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_2"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-2"
                disabled={false}
                id="_selection_column_2-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_3"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_3"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-3"
                disabled={false}
                id="_selection_column_3-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_3_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, hiding the per page options 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_0"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_0_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "hidePerPageOptions": true,
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, selection and sorting 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiTableSortMobile
        items={
          Array [
            Object {
              "isSortAscending": true,
              "isSorted": true,
              "key": "_data_s_name_0",
              "name": "Name",
              "onSort": [Function],
            },
          ]
        }
      />
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          scope="col"
          width="24px"
        >
          <EuiCheckbox
            aria-label="Select all rows"
            checked={false}
            compressed={false}
            data-test-subj="checkboxSelectAll"
            disabled={false}
            id="_selection_column-checkbox"
            indeterminate={false}
            onChange={[Function]}
            type="inList"
          />
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_name_0"
          onSort={[Function]}
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_1"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-1"
                disabled={false}
                id="_selection_column_1-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_2"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-2"
                disabled={false}
                id="_selection_column_2-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_3"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_3"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-3"
                disabled={false}
                id="_selection_column_3-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_3_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, selection, sorting and a single record action 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiTableSortMobile
        items={
          Array [
            Object {
              "isSortAscending": true,
              "isSorted": true,
              "key": "_data_s_name_0",
              "name": "Name",
              "onSort": [Function],
            },
          ]
        }
      />
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          scope="col"
          width="24px"
        >
          <EuiCheckbox
            aria-label="Select all rows"
            checked={false}
            compressed={false}
            data-test-subj="checkboxSelectAll"
            disabled={false}
            id="_selection_column-checkbox"
            indeterminate={false}
            onChange={[Function]}
            type="inList"
          />
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_name_0"
          onSort={[Function]}
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
        <EuiTableHeaderCell
          align="right"
          key="_actions_h_1"
          scope="col"
        >
          Actions
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_1"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-1"
                disabled={false}
                id="_selection_column_1-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
            <EuiTableRowCell
              align="right"
              hasActions={true}
              key="record_actions_1_1"
              showOnHover={true}
              textOnly={false}
            >
              <ExpandedItemActions
                actionEnabled={[Function]}
                actions={
                  Array [
                    Object {
                      "description": "edit",
                      "name": "Edit",
                      "onClick": [Function],
                      "type": "button",
                    },
                  ]
                }
                item={
                  Object {
                    "id": "1",
                    "name": "name1",
                  }
                }
                itemId="1"
              />
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_2"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-2"
                disabled={false}
                id="_selection_column_2-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
            <EuiTableRowCell
              align="right"
              hasActions={true}
              key="record_actions_2_1"
              showOnHover={true}
              textOnly={false}
            >
              <ExpandedItemActions
                actionEnabled={[Function]}
                actions={
                  Array [
                    Object {
                      "description": "edit",
                      "name": "Edit",
                      "onClick": [Function],
                      "type": "button",
                    },
                  ]
                }
                item={
                  Object {
                    "id": "2",
                    "name": "name2",
                  }
                }
                itemId="2"
              />
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_3"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_3"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-3"
                disabled={false}
                id="_selection_column_3-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_3_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
            <EuiTableRowCell
              align="right"
              hasActions={true}
              key="record_actions_3_1"
              showOnHover={true}
              textOnly={false}
            >
              <ExpandedItemActions
                actionEnabled={[Function]}
                actions={
                  Array [
                    Object {
                      "description": "edit",
                      "name": "Edit",
                      "onClick": [Function],
                      "type": "button",
                    },
                  ]
                }
                item={
                  Object {
                    "id": "3",
                    "name": "name3",
                  }
                }
                itemId="3"
              />
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, selection, sorting and column dataType 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiTableSortMobile
        items={
          Array [
            Object {
              "isSortAscending": true,
              "isSorted": true,
              "key": "_data_s_count_0",
              "name": "Count",
              "onSort": [Function],
            },
          ]
        }
      />
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          scope="col"
          width="24px"
        >
          <EuiCheckbox
            aria-label="Select all rows"
            checked={false}
            compressed={false}
            data-test-subj="checkboxSelectAll"
            disabled={false}
            id="_selection_column-checkbox"
            indeterminate={false}
            onChange={[Function]}
            type="inList"
          />
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="right"
          data-test-subj="tableHeaderCell_count_0"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_count_0"
          onSort={[Function]}
          scope="col"
        >
          Count
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_1"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-1"
                disabled={false}
                id="_selection_column_1-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="right"
              header="Count"
              key="_data_column_count_1_0"
              textOnly={true}
            >
              1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_2"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-2"
                disabled={false}
                id="_selection_column_2-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="right"
              header="Count"
              key="_data_column_count_2_0"
              textOnly={true}
            >
              2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_3"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_3"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-3"
                disabled={false}
                id="_selection_column_3-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="right"
              header="Count"
              key="_data_column_count_3_0"
              textOnly={true}
            >
              3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, selection, sorting and column renderer 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiTableSortMobile
        items={
          Array [
            Object {
              "isSortAscending": true,
              "isSorted": true,
              "key": "_data_s_name_0",
              "name": "Name",
              "onSort": [Function],
            },
          ]
        }
      />
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          scope="col"
          width="24px"
        >
          <EuiCheckbox
            aria-label="Select all rows"
            checked={false}
            compressed={false}
            data-test-subj="checkboxSelectAll"
            disabled={false}
            id="_selection_column-checkbox"
            indeterminate={false}
            onChange={[Function]}
            type="inList"
          />
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_name_0"
          onSort={[Function]}
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_1"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-1"
                disabled={false}
                id="_selection_column_1-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={false}
            >
              NAME1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_2"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-2"
                disabled={false}
                id="_selection_column_2-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={false}
            >
              NAME2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_3"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_3"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-3"
                disabled={false}
                id="_selection_column_3-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_3_0"
              textOnly={false}
            >
              NAME3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, selection, sorting and multiple record actions 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiTableSortMobile
        items={
          Array [
            Object {
              "isSortAscending": true,
              "isSorted": true,
              "key": "_data_s_name_0",
              "name": "Name",
              "onSort": [Function],
            },
          ]
        }
      />
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          scope="col"
          width="24px"
        >
          <EuiCheckbox
            aria-label="Select all rows"
            checked={false}
            compressed={false}
            data-test-subj="checkboxSelectAll"
            disabled={false}
            id="_selection_column-checkbox"
            indeterminate={false}
            onChange={[Function]}
            type="inList"
          />
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_name_0"
          onSort={[Function]}
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
        <EuiTableHeaderCell
          align="right"
          key="_actions_h_1"
          scope="col"
        >
          Actions
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_1"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-1"
                disabled={false}
                id="_selection_column_1-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
            <EuiTableRowCell
              align="right"
              hasActions={true}
              key="record_actions_1_1"
              showOnHover={true}
              textOnly={false}
            >
              <ExpandedItemActions
                actionEnabled={[Function]}
                actions={
                  Array [
                    Object {
                      "name": "Actions",
                      "render": [Function],
                    },
                  ]
                }
                item={
                  Object {
                    "id": "1",
                    "name": "name1",
                  }
                }
                itemId="1"
              />
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_2"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-2"
                disabled={false}
                id="_selection_column_2-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
            <EuiTableRowCell
              align="right"
              hasActions={true}
              key="record_actions_2_1"
              showOnHover={true}
              textOnly={false}
            >
              <ExpandedItemActions
                actionEnabled={[Function]}
                actions={
                  Array [
                    Object {
                      "name": "Actions",
                      "render": [Function],
                    },
                  ]
                }
                item={
                  Object {
                    "id": "2",
                    "name": "name2",
                  }
                }
                itemId="2"
              />
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_3"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_3"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-3"
                disabled={false}
                id="_selection_column_3-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_3_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
            <EuiTableRowCell
              align="right"
              hasActions={true}
              key="record_actions_3_1"
              showOnHover={true}
              textOnly={false}
            >
              <ExpandedItemActions
                actionEnabled={[Function]}
                actions={
                  Array [
                    Object {
                      "name": "Actions",
                      "render": [Function],
                    },
                  ]
                }
                item={
                  Object {
                    "id": "3",
                    "name": "name3",
                  }
                }
                itemId="3"
              />
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, selection, sorting, column renderer and column dataType 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiTableSortMobile
        items={
          Array [
            Object {
              "isSortAscending": true,
              "isSorted": true,
              "key": "_data_s_count_0",
              "name": "Count",
              "onSort": [Function],
            },
          ]
        }
      />
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          scope="col"
          width="24px"
        >
          <EuiCheckbox
            aria-label="Select all rows"
            checked={false}
            compressed={false}
            data-test-subj="checkboxSelectAll"
            disabled={false}
            id="_selection_column-checkbox"
            indeterminate={false}
            onChange={[Function]}
            type="inList"
          />
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="right"
          data-test-subj="tableHeaderCell_count_0"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_count_0"
          onSort={[Function]}
          scope="col"
        >
          Count
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_1"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-1"
                disabled={false}
                id="_selection_column_1-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="right"
              header="Count"
              key="_data_column_count_1_0"
              textOnly={false}
            >
              x
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_2"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-2"
                disabled={false}
                id="_selection_column_2-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="right"
              header="Count"
              key="_data_column_count_2_0"
              textOnly={false}
            >
              xx
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_3"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_3"
            >
              <EuiCheckbox
                aria-label="Select this row"
                checked={false}
                compressed={false}
                data-test-subj="checkboxSelectRow-3"
                disabled={false}
                id="_selection_column_3-checkbox"
                indeterminate={false}
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="right"
              header="Count"
              key="_data_column_count_3_0"
              textOnly={false}
            >
              xxx
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with sortable columns and sorting disabled 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_0"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_0_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable with sorting 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiTableSortMobile
        items={
          Array [
            Object {
              "isSortAscending": true,
              "isSorted": true,
              "key": "_data_s_name_0",
              "name": "Name",
              "onSort": [Function],
            },
          ]
        }
      />
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_name_0"
          onSort={[Function]}
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_0"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_0_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;
